@@ -2,6 +2,7 @@
 
 	* configure.ac: Fix some warnings.
 	* autogen.sh: Remove needless code.
+	* m4/libcharset.m4, m4/iconv.m4: Remove.
 
 2007-10-12 Takuro Ashie <ashie@homa.ne.jp>
 
